# tp_homeworks2020

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c
.github/ workflows /: iz2.yml
.github/workflows/: iz2.yml
ci/travis/: install-linux.sh
gtest/: CMakeLists.txt  test.cpp
gtest/testFile/: test.txt  test2.txt
include/: matrix.h  matrix.hpp
libs/: CMakeLists.txt  main.c
libs/include/: define_file.h  matrix.h  matrix_op.h
libs/src/: matrix.c  matrix_op.c
project/: CMakeLists.txt
project/include/: main.h  matrix.h  matrix_op.h
project/src/: main.c  matrix.c  matrix_op.c
src/: main.c  main.cpp  matrix.c  matrix.cpp
stress_test/: gen_matrix.cpp  stress_test.cpp
test/: CMakeLists.txt  test.cpp
test/gen_matrix/: CMakeLists.txt  gen_matrix.cpp
test/stress_test/: CMakeLists.txt
test/test_files/: ErrorCreate.txt  ErrorData.txt  ErrorRowCol.txt  ErrorSize.txt  Success.txt
